--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -6,6 +6,14 @@
 
 .buttons {
     display: flex;
-    align-items: center;
-    gap: 10px;
+    flex-direction: column;
+    gap: 20px;
+}
+
+@media (min-width: 768px) {
+    .buttons {
+        flex-direction: row;
+        align-items: center;
+        gap: 10px;
+    }
 }
